k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: creditcard-fraud
spec: 
  ports:
  - name: web
    port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
  selector:
    app: flask-app
